# polaris

./: .env.test  .gitignore  Cargo.toml  README.md  bacon.toml  compose-tests.yaml  compose.yaml
.github/workflows/: ci.yaml
config/: base.yaml  development.yaml  testing.yaml
frontend/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: redux.tsx
migrations/: 20250409120133_init.down.sql  20250409120133_init.up.sql  20250414094223_animals-table.down.sql  20250414094223_animals-table.up.sql  20250419125420_records-tables.down.sql  20250419125420_records-tables.up.sql  20250526074201_mass-table.down.sql  20250526074201_mass-table.up.sql  20250615142635_model-summaries.down.sql  20250615142635_model-summaries.up.sql
src/: app.rs  lib.rs  state.rs
src/config/: auth.rs  db.rs  env.rs  error.rs  logger.rs  mod.rs  server.rs
src/controllers/: admin.rs  animals.rs  auth.rs  breeds.rs  dashboard.rs  health.rs  health_records.rs  mod.rs  production.rs  production_records.rs  species.rs  weight.rs
src/errors/: mod.rs
src/fixtures/: animals.json  breeds.json  healthRecords.json  organisations.json  productionRecords.json  users.json  weightRecords.json
src/middlewares/: admin.rs  auth.rs  authorisation.rs  manager.rs  mod.rs  refresh.rs  staff.rs  trace.rs
src/models/: animals.rs  breeds.rs  enums.rs  errors.rs  health.rs  health_records.rs  livestock.rs  mod.rs  orgs.rs  production.rs  production_records.rs  roles.rs  species.rs  users.rs  weight.rs
src/seed/: error.rs  mod.rs
src/views/: animals.rs  mod.rs  user.rs
tests/: mod.rs
tests/models/: animals.rs  breeds.rs  health.rs  health_records.rs  livestock.rs  mod.rs  orgs.rs  production.rs  production_records.rs  roles.rs  (+3 more)
(+282 files in other folders)
